# slack-block-kit-builder

./: .cursorrules  README.md  pyproject.toml
.github/workflows/: ci-cd.yml  release.yml  test.yml
examples/: basic_message.py  direct_object_example.py  interactive_message.py  modal_example.py  payload_parsing_example.py  simple_direct_example.py
slack_block_kit_builder/: blocks.py  composition.py  elements.py  message.py  validators.py
slack_blocksmith/: message.py
tests/: test_blocks.py  test_composition.py  test_elements.py  test_message.py  test_message_from_payload.py
